--- a/index.html
+++ b/index.html
@@ -10,60 +10,74 @@
 <body>
     <div class="row">
         <div class="column-1 estilos">
-            <p class="p1">Mobile development</p>
-            <p class="p2">Grow your business with mobile apps</p>
+            <p class="p1 marginleft">Mobile development</p>
+            <p class="p2 marginleft">Grow your business with mobile apps</p>
         </div>
     </div>
-    <div class="row">
+    <div class="section-1">
         <div class="column-2 estilos">
-            <p>Sleeping</p>
-            <p>Helps millions fall asleep every night</p>
-            <p>Branding, design, mobile, product</p>
+            <p class="p3 marginleft">Sleeping</p>
+            <p class="p4 marginleft">Helps millions fall asleep every night</p>
+            <p class="marginleft">branding, design, mobile, product</p>
         </div>
         <div class="column-2 estilos">
-            <p>img1</p>
+            <img src="./img/section-1-m.png" class="img">
         </div>
     </div>
-    <div class="row">
+    <div class="section-2">
         <div class="column-2 estilos">
-            <p>img2</p>
+            <img src="./img/section-2-m.png" class="img">
         </div>
         <div class="column-2 estilos">
-            <p>uLesson</p>
-            <p>Online platform for distance learning</p>
-            <p>web, mobile, product</p>
+            <p class="p3 marginleft">uLesson</p>
+            <p class="p4 marginleft">Online platform for distance learning</p>
+            <p class="marginleft">web, mobile, product</p>
         </div>
     </div>
-    <div class="row">
+    <div class="section-3">
         <div class="column-2 estilos">
-            <p>Genesis Vision</p>
-            <p>Private trust management and trading platform</p>
-            <p>branding, design, experience, product</p>
+            <p class="p3 marginleft">Genesis Vision</p>
+            <p class="p4 marginleft">Private trust management and trading platform</p>
+            <p class="marginleft">branding, design, experience, product</p>
         </div>
         <div class="column-2 estilos">
-            <p>img3</p>
+            <img src="./img/section-3-m.png" class="img">
         </div>
     </div>
-    <div class="row">
-        <div class="column-1 estilos">
-            <p>Have an idea? Tell us about it</p>
+    <div class="section-4">
+        <div class="column-1 estilos2">
+            <p class="p5 marginleft">Have an idea? Tell us about it</p>
         </div>
     </div>
-    <div class="row">
-        <div class="column-4 estilos">
-            <p>Features</p>
+    <div class="section-4">
+        <div class="column-4 estilos3">
+            <p class="p6 marginleft bold">Product</p>
+            <p class="p6 marginleft">Features</p>
+            <p class="p6 marginleft">Security</p>
+            <p class="p6 marginleft">Enterprise</p>
+            <p class="p6 marginleft">Customer stories</p>
+
         </div>
-        <div class="column-4 estilos">
-            <p>Product</p>
+        <div class="column-4 estilos3">
+            <p class="p6 marginleft bold">Platform</p>
+            <p class="p6 marginleft">Developer API</p>
+            <p class="p6 marginleft">Partners</p>
+            <p class="p6 marginleft">Atom</p>
+            <p class="p6 marginleft">Electron</p>
         </div>
-        <div class="column-4 estilos">
-            <p>Security</p>
+        <div class="column-4 estilos3">
+            <p class="p6 marginleft bold">Support</p>
+            <p class="p6 marginleft">Help</p>
+            <p class="p6 marginleft">Community Forum</p>
+            <p class="p6 marginleft">Learning Lab</p>
+            <p class="p6 marginleft">Certifications</p>
         </div>
-        <div class="column-4 estilos">
-            <p>Enterprise</p>
-        </div>
-        <div class="column-4 estilos">
-            <p>Customer stories</p>
+        <div class="column-4 estilos3">
+            <p class="p6 marginleft bold">Company/p>
+            <p class="p6 marginleft">About</p>
+            <p class="p6 marginleft">Blog</p>
+            <p class="p6 marginleft">Careers</p>
+            <p class="p6 marginleft">Press</p>
         </div>
     </div>
 </body>
