--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p class="p2 marginleft">Grow your business with mobile apps</p>
         </div>
     </div>
-    <div class="section-1">
+    <div class="row section-1">
         <div class="column-2 estilos">
             <p class="p3 marginleft">Sleeping</p>
             <p class="p4 marginleft">Helps millions fall asleep every night</p>
@@ -24,7 +24,7 @@
             <img src="./img/section-1-m.png" class="img">
         </div>
     </div>
-    <div class="section-2">
+    <div class="row section-2">
         <div class="column-2 estilos">
             <img src="./img/section-2-m.png" class="img">
         </div>
@@ -34,7 +34,7 @@
             <p class="marginleft">web, mobile, product</p>
         </div>
     </div>
-    <div class="section-3">
+    <div class="row section-3">
         <div class="column-2 estilos">
             <p class="p3 marginleft">Genesis Vision</p>
             <p class="p4 marginleft">Private trust management and trading platform</p>
@@ -44,19 +44,18 @@
             <img src="./img/section-3-m.png" class="img">
         </div>
     </div>
-    <div class="section-4">
+    <div class="row section-4">
         <div class="column-1 estilos2">
             <p class="p5 marginleft">Have an idea? Tell us about it</p>
         </div>
     </div>
-    <div class="section-4">
+    <div class="row section-4">
         <div class="column-4 estilos3">
             <p class="p6 marginleft bold">Product</p>
             <p class="p6 marginleft">Features</p>
             <p class="p6 marginleft">Security</p>
             <p class="p6 marginleft">Enterprise</p>
             <p class="p6 marginleft">Customer stories</p>
-
         </div>
         <div class="column-4 estilos3">
             <p class="p6 marginleft bold">Platform</p>
@@ -73,10 +72,10 @@
             <p class="p6 marginleft">Certifications</p>
         </div>
         <div class="column-4 estilos3">
-            <p class="p6 marginleft bold">Company/p>
+            <p class="p6 marginleft bold">Company</p>
             <p class="p6 marginleft">About</p>
             <p class="p6 marginleft">Blog</p>
-            <p class="p6 marginleft">Careers</p>
+            <p class="p6 marginleft" >Careers</p>
             <p class="p6 marginleft">Press</p>
         </div>
     </div>
