--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- indica el titulo de la pagina -->
     <title>Mobile apps</title>
+    <!-- indica el archivo de css externo -->
     <link rel="stylesheet" type="text/css" href="./estilos.css">
 </head>
 <body>
+    <!-- indica la primera fila del flex -->
     <div class="row">
-        <div class="column-1 estilos">
+        <div class="estilos">
             <p class="p1 marginleft">Mobile development</p>
             <p class="p2 marginleft">Grow your business with mobile apps</p>
         </div>
     </div>
-    <div class="row section-1">
+    <!-- indica la segunda fila del flex -->
+    <div class="section-1">
         <div class="column-2 estilos">
             <p class="p3 marginleft">Sleeping</p>
             <p class="p4 marginleft">Helps millions fall asleep every night</p>
@@ -24,7 +28,8 @@
             <img src="./img/section-1-m.png" class="img">
         </div>
     </div>
-    <div class="row section-2">
+    <!-- indica la tercera fila del flex -->
+    <div class="section-2">
         <div class="column-2 estilos">
             <img src="./img/section-2-m.png" class="img">
         </div>
@@ -34,7 +39,8 @@
             <p class="marginleft">web, mobile, product</p>
         </div>
     </div>
-    <div class="row section-3">
+    <!-- indica la cuarta fila del flex -->
+    <div class="section-3">
         <div class="column-2 estilos">
             <p class="p3 marginleft">Genesis Vision</p>
             <p class="p4 marginleft">Private trust management and trading platform</p>
@@ -44,12 +50,14 @@
             <img src="./img/section-3-m.png" class="img">
         </div>
     </div>
-    <div class="row section-4">
+    <!-- indica la quinta fila del flex -->
+    <div class="section-4">
         <div class="column-1 estilos2">
             <p class="p5 marginleft">Have an idea? Tell us about it</p>
         </div>
     </div>
-    <div class="row section-4">
+    <!-- indica la sexta fila del flex -->
+    <div class="section-4">
         <div class="column-4 estilos3">
             <p class="p6 marginleft bold">Product</p>
             <p class="p6 marginleft">Features</p>
