--- a/index.html
+++ b/index.html
@@ -19,34 +19,34 @@
     </div>
     <!-- indica la segunda fila del flex -->
     <div class="section-1">
-        <div class="column-2 estilos">
+        <div class="column-2 estilos1">
             <p class="p3 marginleft">Sleeping</p>
             <p class="p4 marginleft">Helps millions fall asleep every night</p>
-            <p class="marginleft">branding, design, mobile, product</p>
+            <p class="p7 marginleft">branding, design, mobile, product</p>
         </div>
-        <div class="column-2 estilos">
+        <div class="column-2 estilos1">
             <img src="./img/section-1-m.png" class="img">
         </div>
     </div>
     <!-- indica la tercera fila del flex -->
     <div class="section-2">
-        <div class="column-2 estilos">
+        <div class="column-2 estilos1">
             <img src="./img/section-2-m.png" class="img">
         </div>
-        <div class="column-2 estilos">
+        <div class="column-2 estilos1">
             <p class="p3 marginleft">uLesson</p>
             <p class="p4 marginleft">Online platform for distance learning</p>
-            <p class="marginleft">web, mobile, product</p>
+            <p class="p7 marginleft">web, mobile, product</p>
         </div>
     </div>
     <!-- indica la cuarta fila del flex -->
     <div class="section-3">
-        <div class="column-2 estilos">
+        <div class="column-2 estilos1">
             <p class="p3 marginleft">Genesis Vision</p>
             <p class="p4 marginleft">Private trust management and trading platform</p>
-            <p class="marginleft">branding, design, experience, product</p>
+            <p class="p7 marginleft">branding, design, experience, product</p>
         </div>
-        <div class="column-2 estilos">
+        <div class="column-2 estilos1">
             <img src="./img/section-3-m.png" class="img">
         </div>
     </div>
